# ma_anastasia

./: .gitignore  README.md  pyproject.toml
Exercises/HW01/: answer.ipynb  hw1.ipynb
Exercises/HW02/: binge_cleaned.csv  hw2.ipynb
Exercises/HW03/: hw3.ipynb
restaurant_client/: README.md  pyproject.toml
restaurant_client/docs/source/: conf.py  index.rst
restaurant_client/src/restaurant_client/: __init__.py  cli.py  client.py  utils.py
restaurant_client/tests/: test_basic.py  test_client.py
