[project]
name = "myproject"
version = "0.1.0"
description = "Anastasia Ma"
authors = [
    {name = "Anastasia Ma",email = "your@email.com"}
]
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
